[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/UI/DialogComponents/DialogWindowPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Themes/MainMenu_Bottom_Row_Buttons.theme" type="Theme" id=2]
[ext_resource path="res://Assets/UI/Texture Buttons/Dialog-Next-Button.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/DialogWindow.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Texture Buttons/Dialog-Next-Button-Pressed.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI/DialogComponents/ConfirmationWindow.tscn" type="PackedScene" id=7]

[node name="DialogWindow" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="DialogWindow" parent="." instance=ExtResource( 1 )]
pause_mode = 2
anchor_left = 0.2
anchor_top = 0.622
anchor_right = 0.8

[node name="ConfirmationWindow" parent="." instance=ExtResource( 7 )]
pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 843.0
margin_bottom = 316.0

[node name="AutoTimer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="NextButton" type="TextureButton" parent="."]
pause_mode = 2
anchor_left = 0.784
anchor_top = 0.7
anchor_right = 0.796
anchor_bottom = 0.703
margin_left = -42.816
margin_top = 116.0
margin_right = 7.18402
margin_bottom = 166.0
rect_min_size = Vector2( 50, 50 )
focus_mode = 0
theme = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Voice" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Voice"

[connection signal="dialogClosed" from="." to="." method="_on_DialogWindow_dialogClosed"]
[connection signal="AutoPlay" from="DialogWindow" to="." method="_on_DialogWindow_AutoPlay"]
[connection signal="Settings" from="DialogWindow" to="." method="_on_DialogWindow_Settings"]
[connection signal="Skip" from="DialogWindow" to="." method="_on_DialogWindow_Skip"]
[connection signal="choiceMade" from="DialogWindow" to="." method="_on_DialogWindow_choiceMade"]
[connection signal="writingFinished" from="DialogWindow" to="." method="_on_DialogWindow_writingFinished"]
[connection signal="confirmation" from="ConfirmationWindow" to="." method="_on_ConfirmationWindow_confirmation"]
[connection signal="timeout" from="AutoTimer" to="." method="_on_AutoTimer_timeout"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
